# synth

./: .travis.yml  CMakeLists.txt  README.md  index.html  params.json
include/: audio.hpp  common.hpp  context.hpp  device.hpp  uss.hpp
include/core/: common.hpp  context.hpp  core.hpp  device.hpp  node.hpp
include/modular/: clock.hpp  clockdiv.hpp  enveloppe.hpp  filter.hpp  gain.hpp  instrument.hpp  mixer.hpp  modular.hpp  oscillator.hpp  sequencer.hpp
include/modular/nodes/: enveloppe.hpp  filter.hpp  gain.hpp  mixer.hpp  node.hpp  nodes.hpp  oscillator.hpp
include/nodes/: adder.hpp  filter.hpp  gain.hpp  mixer.hpp  node.hpp  nodes.hpp  oscillator.hpp
include/uss/: core.hpp  modular.hpp
include/uss/core/: common.hpp  context.hpp  device.hpp  node.hpp
include/uss/modular/: clock.hpp  clockdiv.hpp  enveloppe.hpp  filter.hpp  gain.hpp  mixer.hpp  oscillator.hpp  saturator.hpp  sequencer.hpp
src/: common.cpp  context.cpp  device.cpp
src/core/: common.cpp  context.cpp  device.cpp
src/modular/: instrument.cpp  node.cpp
src/nodes/: node.cpp
src/uss/core/: common.cpp  context.cpp  device.cpp
src/uss/modular/: node.cpp
test/: CMakeLists.txt
test/sketch/: CMakeLists.txt  main.cpp
